# somesy

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .somesy.toml  .sourcery.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  REUSE.toml  codemeta.json  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: ci.yml  release.yml
.reuse/: dep5
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/changelog/: index.html
dev/code_of_conduct/: index.html
dev/contributing/: index.html
dev/coverage/: covindex.html  d_1772db955a685d28___init___py.html  d_1772db955a685d28_fill_py.html  d_1772db955a685d28_init_py.html  d_1772db955a685d28_sync_py.html  d_1772db955a685d28_util_py.html  d_22470fc7858cbfa7___init___py.html  d_22470fc7858cbfa7_core_py.html  d_22470fc7858cbfa7_models_py.html  d_22470fc7858cbfa7_poetry_py.html  d_22470fc7858cbfa7_setuptools_py.html  d_22470fc7858cbfa7_utils_py.html  d_22470fc7858cbfa7_writer_py.html  d_3187dccd59625139___init___py.html  d_3187dccd59625139_exec_py.html  d_3187dccd59625139_utils_py.html  d_52da451127691ee7___init___py.html  d_52da451127691ee7_init_config_py.html  d_52da451127691ee7_sync_from_pyproject_py.html  d_52da451127691ee7_sync_py.html  d_596ffba9215ba05d___init___py.html  d_596ffba9215ba05d_core_py.html  d_596ffba9215ba05d_log_py.html  d_596ffba9215ba05d_models_py.html  d_596ffba9215ba05d_types_py.html  d_596ffba9215ba05d_writer_py.html  d_97b113e3d51588b3___init___py.html  d_97b113e3d51588b3_main_py.html  d_b9578909e48e55c1___init___py.html  d_b9578909e48e55c1_models_py.html  d_b9578909e48e55c1_writer_py.html  d_f5af67d419469b2e___init___py.html  d_f5af67d419469b2e_core_py.html  d_f5af67d419469b2e_utils_py.html  d_f5af67d419469b2e_validate_py.html  d_f5af67d419469b2e_writer_py.html  index.html  status.json
dev/credits/: index.html
dev/dev_guide/: index.html
dev/license/: index.html
dev/manual/: index.html
dev/quickstart/: index.html
dev/search/: search_index.json
docs/: _template_authors.md  dev_guide.md  index.md  manual.md
docs/scripts/: coverage_status.py
latest/: index.html  sitemap.xml
latest/changelog/: index.html
latest/code_of_conduct/: index.html
latest/contributing/: index.html
latest/coverage/: covindex.html  d_1772db955a685d28___init___py.html  d_1772db955a685d28_init_py.html  d_1772db955a685d28_sync_py.html  d_1772db955a685d28_util_py.html  d_22470fc7858cbfa7___init___py.html  d_22470fc7858cbfa7_core_py.html  d_22470fc7858cbfa7_models_py.html  d_22470fc7858cbfa7_poetry_py.html  d_22470fc7858cbfa7_setuptools_py.html  d_22470fc7858cbfa7_utils_py.html  d_22470fc7858cbfa7_writer_py.html  d_3187dccd59625139___init___py.html  d_3187dccd59625139_exec_py.html  d_3187dccd59625139_utils_py.html  d_52da451127691ee7___init___py.html  d_52da451127691ee7_init_config_py.html  d_52da451127691ee7_sync_from_pyproject_py.html  d_52da451127691ee7_sync_py.html  d_596ffba9215ba05d___init___py.html  d_596ffba9215ba05d_config_py.html  d_596ffba9215ba05d_core_py.html  d_596ffba9215ba05d_discover_py.html  d_596ffba9215ba05d_log_py.html  d_596ffba9215ba05d_models_py.html  d_596ffba9215ba05d_types_py.html  d_596ffba9215ba05d_utils_py.html  d_596ffba9215ba05d_writer_py.html  d_97b113e3d51588b3___init___py.html  d_97b113e3d51588b3_main_py.html  d_b9578909e48e55c1___init___py.html  d_b9578909e48e55c1_models_py.html  d_b9578909e48e55c1_writer_py.html  d_f5af67d419469b2e___init___py.html  d_f5af67d419469b2e_core_py.html  d_f5af67d419469b2e_utils_py.html  d_f5af67d419469b2e_validate_py.html  d_f5af67d419469b2e_writer_py.html  index.html
latest/credits/: index.html
latest/dev_guide/: index.html
latest/license/: index.html
latest/manual/: index.html
latest/overrides/: main.html
latest/quickstart/: index.html
latest/search/: search_index.json
main/: 404.html  index.html  objects.inv  sitemap.xml
main/changelog/: index.html
main/code_of_conduct/: index.html
main/contributing/: index.html
main/coverage/: class_index.html  covindex.html  d_1772db955a685d28___init___py.html  d_1772db955a685d28_fill_py.html  d_1772db955a685d28_init_py.html  d_1772db955a685d28_sync_py.html  d_1772db955a685d28_util_py.html  d_1772db955a685d28_utils_py.html  d_22470fc7858cbfa7___init___py.html  d_22470fc7858cbfa7_core_py.html  d_22470fc7858cbfa7_models_py.html  d_22470fc7858cbfa7_poetry_py.html  d_22470fc7858cbfa7_setuptools_py.html  d_22470fc7858cbfa7_utils_py.html  d_22470fc7858cbfa7_writer_py.html  d_3187dccd59625139___init___py.html  d_3187dccd59625139_exec_py.html  d_3187dccd59625139_utils_py.html  d_3187dccd59625139_writer_py.html  d_3ca2b73183ed41f7___init___py.html  d_3ca2b73183ed41f7_models_py.html  d_3ca2b73183ed41f7_writer_py.html  d_52da451127691ee7___init___py.html  d_52da451127691ee7_init_config_py.html  d_52da451127691ee7_sync_from_pyproject_py.html  d_52da451127691ee7_sync_py.html  d_55871f16c47673c2___init___py.html  d_596ffba9215ba05d_core_py.html  (+76 more)
tests/: conftest.py  test_codemeta.py  test_main.py
tests/core/data/: .somesy.toml  .somesy.with_config.toml  pyproject.toml
tests/data/: CITATION.cff  Cargo.toml  Project.toml  blank_pom.xml  example_1.xml  example_pom.xml  fpm.toml  mkdocs.yml  package.json  pom.xml  pyproject.setuptools.toml  pyproject.toml  pyproject2.toml  somesy.toml
v0.0.1/: 404.html  index.html  sitemap.xml
v0.1.0/: 404.html  index.html  sitemap.xml
v0.2.0/: 404.html  sitemap.xml
v0.2.1/: 404.html  index.html  sitemap.xml
v0.3.0/: 404.html  index.html  sitemap.xml
v0.3.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.4.0/: 404.html  index.html  sitemap.xml
v0.4.1/: 404.html  index.html  sitemap.xml
v0.4.2/: 404.html  index.html  objects.inv  sitemap.xml
v0.4.3/: 404.html  index.html  sitemap.xml
v0.5.0/: 404.html  index.html  sitemap.xml
v0.6.0/: 404.html  index.html  sitemap.xml
v0.7.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.7.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.7.2/: 404.html  index.html  objects.inv  sitemap.xml
v0.7.3/: 404.html  index.html  objects.inv  sitemap.xml
(+1549 files in other folders)
