[tool.poetry]
name = "somesy"
version = "0.0.1"
description = "A cli tool for synchronizing CITATION.CFF with project files."
authors = ["Mustafa Soylu <m.soylu@fz-juelich.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Materials-Data-Science-and-Informatics/somesy"
homepage = "https://github.com/Materials-Data-Science-and-Informatics/somesy"
documentation = "https://github.com/Materials-Data-Science-and-Informatics/somesy"
keywords = ["metadata", "rdm", "FAIR", "framework"]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.2"
ruamel-yaml = "^0.17.21"
tomlkit = "^0.11.6"
importlib-metadata = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17.0"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.10.0"
pdoc = "^12.3.1"
hypothesis = "^6.58.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
init-dev = "pre-commit install"
lint = "pre-commit run --all-files"
test = "pytest"
docs = "pdoc -o docs somesy"

# pytest.ini replacement (pytest >= 6.0)
[tool.pytest.ini_options]
addopts = "--cov-report=term-missing:skip-covered"
filterwarnings = [
    "ignore::PendingDeprecationWarning:pydantic_yaml.*",
    "ignore::DeprecationWarning:importlib_metadata.*"
]

# .coveragerc replacement
[tool.coverage.run]
source = ['somesy']

# project metadata
[tool.somesy.project]
name = "somesy"
version = "0.1.0"
description = "A cli tool for synchronizing CITATION.CFF with project files."
authors = [{family-names = "Soylu", given-names= "Mustafa", email = "m.soylu@fz-juelich.de", orcid = "https://orcid.org/0000-0003-2637-0432", contribution = "The main author, maintainer and tester.", contribution_begin = "2023-03-01", contribution_type = "code"}]
maintainers = [{family-names = "Soylu", given-names= "Mustafa", email = "m.soylu@fz-juelich.de", orcid = "https://orcid.org/0000-0003-2637-0432", contribution = "The main author, maintainer and tester.", contribution_begin = "2023-03-01", contribution_type = "code"}]
contributors = [{family-names = "Soylu", given-names= "Mustafa", email = "m.soylu@fz-juelich.de", orcid = "https://orcid.org/0000-0003-2637-0432", contribution = "The main author, maintainer and tester.", contribution_begin = "2023-03-01", contribution_type = "code"}]
keywords = ["metadata", "rdm", "FAIR", "framework"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Materials-Data-Science-and-Informatics/somesy"
homepage = "https://github.com/Materials-Data-Science-and-Informatics/somesy"
